# secure_multiparty_computation_examples

./: README.md
scale_mamba/: Dockerfile
weather_app_with_ot/: Dockerfile  README.md
weather_app_with_ot/server/: CMakeLists.txt  server.cpp
weather_app_with_ot/user/: CMakeLists.txt  user.cpp
